k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops
  labels:
    app: devops-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: devops-app
